@@ -1,4 +1,5 @@
 HEAD
+    + Fixed support for files in the scenarios defined in yaml
     + Changed the script that configured a host to be a dhcp-router
     + Allowing empty variables in the scenarios tests
     + Adding support to set the mirror from the image xml definition
